--- a/analysis/exploreArrayBiasEPIC.Rmd
+++ b/analysis/exploreArrayBiasEPIC.Rmd
@@ -54,53 +54,37 @@ summary(numCpgsPerGene)
 
 ```{r}
 dat <- data.frame(table(table(flatAnn$entrezid)))
+numCpgsPerGene <- as.vector(table(flatAnn$entrezid))
 med <- median(numCpgsPerGene)
 mod <- getMode(numCpgsPerGene)
-  
-ggplot(dat, aes(x=Var1, y=Freq)) +
-  geom_segment(aes(x=Var1, xend=Var1, y=0, yend=Freq), color="darkgrey") +
-  geom_point( color="black", size=1) +
-  geom_vline(xintercept = med, linetype = "dashed", color = "red") +
-  annotate("text", x = med + 2, label=glue("median = {med}"), y=700, colour="red", 
-            size = 3, hjust="left") +
-  geom_vline(xintercept = mod, linetype = "dashed", color = "blue") +
-  annotate("text", x = mod + 2, label=glue("mode = {mod}"), y=760, colour="blue", 
-            size = 3, hjust="left") +
-  scale_x_discrete(breaks = c(1,10,20,30,45,55,70,80,90,100,120,135,150,160,180,
-                              200,215,250,330,429,1485)) +
-  theme(axis.text.x=element_text(angle=45, hjust=1)) +
-  xlab("No. CpGs per gene") +
-  ylab("Frequency")
+
+p <- ggplot(dat, aes(x=Var1, y=Freq)) +
+    geom_segment(aes(x=Var1, xend=Var1, y=0, yend=Freq), color="darkgrey") +
+    geom_point( color="black", size=1) +
+    geom_vline(xintercept = med, linetype = "dashed", color = "black") +
+    annotate("text", x = med + 2, label=glue("Median = {med}"), y=720, colour="black", 
+             size = 3, hjust="left") +
+    geom_vline(xintercept = mod, linetype = "dashed", color = "black") +
+    annotate("text", x = mod + 2, label=glue("Mode = {mod}"), y=780, colour="black", 
+             size = 3, hjust="left") +
+    scale_x_discrete(breaks = c(1,10,20,30,45,55,70,80,90,100,120,135,150,160,180,
+                                200,215,250,330,429,1485)) +
+    theme(axis.text.x=element_text(angle=45, hjust=1)) +
+    xlab("No. CpGs per gene") +
+    ylab("Frequency")
+
+p
 ```
 
-#### Download
+#### Create PDF
 
-```{r}
-file <- here("output/Fig-1A.pdf")
+```{r, eval=FALSE}
+fig <- here("output/Fig-1A.pdf")
 
-pdf(file = file)
-dat <- data.frame(table(table(flatAnn$entrezid)))
-med <- median(numCpgsPerGene)
-mod <- getMode(numCpgsPerGene)
-  
-ggplot(dat, aes(x=Var1, y=Freq)) +
-  geom_segment(aes(x=Var1, xend=Var1, y=0, yend=Freq), color="darkgrey") +
-  geom_point( color="black", size=1) +
-  geom_vline(xintercept = med, linetype = "dashed", color = "red") +
-  annotate("text", x = med + 2, label=glue("median = {med}"), y=700, colour="red", 
-            size = 3, hjust="left") +
-  geom_vline(xintercept = mod, linetype = "dashed", color = "blue") +
-  annotate("text", x = mod + 2, label=glue("mode = {mod}"), y=760, colour="blue", 
-            size = 3, hjust="left") +
-  scale_x_discrete(breaks = c(1,10,20,30,45,55,70,80,90,100,120,135,150,160,180,
-                              200,215,250,330,429,1485)) +
-  theme(axis.text.x=element_text(angle=45, hjust=1)) +
-  xlab("No. CpGs per gene") +
-  ylab("Frequency")
+pdf(file = fig, width = 9)
+p
 dev.off()
 ```
-
-[Figure 1A](file)
 
 ### Figure 1D {.tabset}
 #### View
@@ -112,86 +96,84 @@ dat$Split <- ifelse(dat$Freq > 2500, "A",
                     ifelse(dat$Freq < 2500 & dat$Freq > 65,"B","C"))
 
 a <- ggplot(dat[dat$Split == "A",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x = element_blank(), 
-        axis.text.y=element_text(angle=90, hjust=0.5)) +
-  ylab("Frequency")
+    geom_bar(stat = "identity") +
+    theme(axis.title.x = element_blank(), 
+          axis.text.y=element_text(angle=90, hjust=0.5)) +
+    ylab("Frequency")
 
 b <- ggplot(dat[dat$Split == "B",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x = element_blank(),
-        axis.title.y = element_blank())
+    geom_bar(stat = "identity") +
+    theme(axis.title.x = element_blank(),
+          axis.title.y = element_blank())
 
 c <- ggplot(dat[dat$Split == "C",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x=element_blank(),
-        axis.title.y = element_blank()) 
+    geom_bar(stat = "identity") +
+    theme(axis.title.x=element_blank(),
+          axis.title.y = element_blank()) 
 
-a + b + c + plot_layout(widths = c(1,2,6)) + 
-  plot_annotation(caption = "No. genes mapped to a CpG",
-                  theme = theme(plot.caption = element_text(hjust = 0.5, 
-                                                            size = 12)))
+p <- a + b + c + plot_layout(widths = c(1,2,6)) + 
+    plot_annotation(caption = "No. genes mapped to a CpG",
+                    theme = theme(plot.caption = element_text(hjust = 0.5, 
+                                                              size = 12)))
 ```
 
-#### Download
-```{r}
-file <- here("output/Fig-1D.pdf")
-
-pdf(file = file)
-dat <- data.frame(table(table(flatAnn$cpg)))
-dat$Split <- ifelse(dat$Freq > 2500, "A", 
-                    ifelse(dat$Freq < 2500 & dat$Freq > 65,"B","C"))
-
-a <- ggplot(dat[dat$Split == "A",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x = element_blank(), 
-        axis.text.y=element_text(angle=90, hjust=0.5)) +
-  ylab("Frequency")
-
-b <- ggplot(dat[dat$Split == "B",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x = element_blank(),
-        axis.title.y = element_blank())
-
-c <- ggplot(dat[dat$Split == "C",], aes(x=Var1, y=Freq)) +
-  geom_bar(stat = "identity") +
-  theme(axis.title.x=element_blank(),
-        axis.title.y = element_blank()) 
-
-a + b + c + plot_layout(widths = c(1,2,6)) + 
-  plot_annotation(caption = "No. genes mapped to a CpG",
-                  theme = theme(plot.caption = element_text(hjust = 0.5, 
-                                                            size = 12)))
+#### Create PDF
+```{r, eval=FALSE}
+fig <- here("output/Fig-1D.pdf")
+pdf(file = fig, width = 9)
+p
 dev.off()
-```
-
-[Figure 1D](file)
-
-Explore the distribution of the average number of CpGs per gene, per GO category. First, associate GO categories with the CpG and gene data.
-
-```{r}
-cpgEgGo <- cpgsEgGoFreqs(flatAnn)
-head(cpgEgGo)
 ```
 
 ### {-}
 
-Calculate the average number of CpGs per gene, per GO category and plot the density distribution. 
+Explore the distribution of the average number of CpGs per gene, per GO category. 
 
+### Figure 1C {.tabset}
+#### View
 ```{r}
-cpgEgGo %>% 
-  group_by(GO) %>%
-  summarise(avg = mean(Freq)) -> dat
+ann450 <- loadAnnotation("450k")
+flatAnn450 <- loadFlatAnnotation(ann450)
 
-med <- round(median(dat$avg), 2)
+dat <- cpgsEgGoFreqs(flatAnn)
+dat$Array <- "EPIC"
 
-p <- ggplot(dat, aes(x=avg)) +
-  geom_density() +
-  geom_vline(xintercept = med, linetype="dashed", colour = "red") +
-  labs(x="Mean no. CpGs per gene per GO category", y = "Density") +
-  annotate("text", x = med + 4, label=glue("median = {med}"), 
-           y = 0.035, colour="red", size = 3, hjust="left")
+dat1 <- cpgsEgGoFreqs(flatAnn450)
+dat1$Array <- "450k"
+
+dat %>% bind_rows(dat1) %>% 
+    group_by(Array, GO) %>%
+    summarise(avg = mean(Freq)) -> datSum
+
+maxEPIC <- max(datSum$avg[datSum$Array == "EPIC"])
+max450 <- max(datSum$avg[datSum$Array == "450k"])
+
+bw <- 2
+platform <- c("EPIC" = "blue", "450k" = "red")
+p <- ggplot(datSum, aes(x=avg)) +
+    geom_histogram(dat = subset(datSum, Array == "450k"),
+                   alpha = 0.5, aes(fill = "450k"), binwidth = bw) +
+    geom_histogram(dat = subset(datSum, Array == "EPIC"),
+                   alpha = 0.5, aes(fill = "EPIC"), binwidth = bw) +
+    geom_vline(xintercept = max450, linetype="dashed", colour = "red") +
+    geom_vline(xintercept = maxEPIC, linetype="dashed", colour = "blue") +
+    labs(x="Mean no. CpGs per gene per GO category", y = "Frequency",
+         fill = "Platform") +
+    annotate("text", x = maxEPIC - 4, label=glue("Max. EPIC = {maxEPIC}"),
+             y = 1500, colour="blue", size = 3, hjust="right") +
+    annotate("text", x = max450 - 4, label=glue("Max. 450k = {max450}"),
+             y = 2500, colour="red", size = 3, hjust="right") +
+    scale_fill_manual(values = platform)
 p
+```
+
+#### Create PDF
+```{r}
+fig <- here("output/Fig-1C.pdf")
+
+pdf(file = fig, width = 9)
+p
+dev.off()
 ```
 
 ## Null simulations
