--- a/analysis/runTimeComparison.Rmd
+++ b/analysis/runTimeComparison.Rmd
@@ -27,6 +27,7 @@ library(EnsDb.Hsapiens.v75)
 library(ChAMP)
 library(methylGSA)
 library(gt)
+source(here("code/utility.R"))
 ```
 
 # Compare run-time of different methods
@@ -140,10 +141,10 @@ Plot run-time results.
 
 ```{r}
 timing %>% mutate(time = as.integer(time)) %>%
-    mutate(method = ifelse(method == "gometh", "mmethyl.gometh", 
-                           method)) -> dat
+    mutate(method = unname(dict[method])) -> dat
 
-p1 <- ggplot(dat, aes(x = method, y = time/60, fill = contrast)) + 
+p1 <- ggplot(dat, aes(x = reorder(method, -time), y = time/60, 
+                      fill = contrast)) + 
     geom_bar(position = "dodge", stat = "identity") +
     labs(x = "Method", y = "Run time (minutes)", fill = "Contrast")
 p1
@@ -215,12 +216,12 @@ Plot run-time results.
 
 ```{r}
 multi %>% mutate(time = as.integer(time)) %>%
-    mutate(cores = limma::strsplit2(method, ".", fixed=TRUE)[,3])-> dat
+    mutate(cores = limma::strsplit2(method, ".", fixed=TRUE)[,3]) -> dat
 
 p2 <- ggplot(dat, aes(x = cores, y = time/60, fill = contrast)) + 
     geom_bar(position = "dodge", stat = "identity") +
     labs(x = "No. cores", y = "Run time (minutes)", fill = "Contrast") +
-    ggtitle("Using multiple cores for mgsa.glm") 
+    ggtitle("Using multiple cores for mGLM") 
 p2
 ```
 
@@ -234,16 +235,18 @@ p1 + p2 + theme(text = element_text(size = 8), legend.position = "none") +
 ```
 
 ```{r}
-timing %>% group_by(method) %>%
+timing %>% mutate(method = unname(dict[method])) %>% 
+    group_by(method) %>%
     mutate(time = as.integer(time)) %>%
     summarise(mean = mean(time)) %>%
     mutate(mins = mean/60) %>%
+    dplyr::select(method, mins) %>%
+    arrange(mins) %>%
     as_tibble() -> tab
 
 tab %>% gt() %>%
-    fmt_number(columns = vars(mean, mins), decimals = 2) %>%
+    fmt_number(columns = vars(mins), decimals = 2) %>%
     cols_label(
-        mean = md("**Seconds**"),
         mins = md("**Minutes**"),
         method = md("**Method**")
         ) %>%
